--- a/kilogram/templates/kilogram/base.html
+++ b/kilogram/templates/kilogram/base.html
@@ -10,8 +10,8 @@
   <!-- Bootstrap -->
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 
-  {% load static %}
-  <link rel="stylesheet" type="text/css" href="{% static 'kilogram/style.css' %}" />
+  {% load staticfiles %}
+  <link rel="stylesheet" type="text/css" href="{% static 'kilogram/style.css' %}" /><!-- python manage.py collectstatic -->
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -37,9 +37,13 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"> <span class="glyphicon glyphicon-user"></span> Login</a></li>
-        <li><a href="#">Logout</a></li>
+        {% if user.is_active %}
+        <li><a href="{% url 'login' %}"> <span class="glyphicon glyphicon-heart"></span> {{user.username}}</a></li>
+        <li><a href="{% url 'logout' %}">Logout</a></li>
+        {% else %}
+        <li><a href="{%url 'login' %}"> <span class="glyphicon glyphicon-user"></span> Login</a></li>
         <li><a href="{% url 'admin:index' %}">Admin</a></li>
+        {% endif %}
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
