--- a/kilogram/templates/registration/login.html
+++ b/kilogram/templates/registration/login.html
@@ -17,6 +17,8 @@
   <button type="submit">로그인</button>
 </form>
 
+<br>
+<p>ID가 없으신가요?<a href="{% url 'signup' %}">회원가입</a></p>
 {% endif %}
 
 {% endblock %}
